# Sidekick.ai

./: README.md  Readme.md
EthChrome/: expanded.html  expanded.js  manifest.json  popup.js
da-service/: README.md  package.json
da-service/src/: avail.ts  constants.ts  index.ts  storage.ts  utils.ts
depricated/EthChrome/: auth.js  expanded.css  manifest.json  popup.css  popup.html
frontend/: package-lock.json  package.json
frontend/src/components/: Chat.tsx  Message.tsx  MobileSidebar.tsx  Sidebar.tsx  access-denied.tsx  footer.tsx  header.tsx  layout.tsx
frontend/src/pages/: _app.tsx  chat.tsx  index.tsx
frontend/src/shared/: Constants.ts
frontend/src/utils/: helpers.ts
llm/: main.py  pyproject.toml  structs.py
llm/mongo/: mongodb.py
llm/sidekickai/: recommender.py
llm/sidekickai/gpt/: completion.py
llm/sidekickai/prompts/: prompts.py
llm/sidekickai/vector_db/: db.py
pan_card_registeration_demo/: index.html
selenuim_bot/: Readme.md  helpers.py  live.json  main.py  page_source.html  pan-card.json  test.py
sidekickai/: recommender.py
sidekickai/gpt/: completion.py  prompt_data.json
zk/: README.md  config.json  data.json  package.json  tsconfig.json
zk/keys/: sidekick-zk.json
zk/src/: FormInput.ts  FormVerifier.ts  compileDeploy.ts  constants.ts  index.ts  interactWithContract.ts  server.ts  utils.ts
zk/test/: FormVerifier.test.ts
