[tool.poetry]
name = "sidekick-gpt"
version = "0.1.0"
description = ""
authors = ["anukkrit149 <anukkrit.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.46.1"
pinecone = "^5.3.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
